[package]
name = "simple_interp"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare_metal_map = {git = "https://github.com/gjf2a/bare_metal_map"}
gc_headers = {git = "https://github.com/gjf2a/gc_headers"}
bare_metal_queue = {git = "https://github.com/gjf2a/bare_metal_queue"}
thiserror-no-std = "2.0.2"